; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/freetype/src/raster/extr_ftraster.c_ft_black_set_mode.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/freetype/src/raster/extr_ftraster.c_ft_black_set_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i8*)* @ft_black_set_mode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ft_black_set_mode(i8* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = call i32 @FT_UNUSED(i8* %7)
  %9 = load i8*, i8** %5, align 8
  %10 = call i32 @FT_UNUSED(i8* %9)
  %11 = load i8*, i8** %6, align 8
  %12 = call i32 @FT_UNUSED(i8* %11)
  ret i32 0
}

declare dso_local i32 @FT_UNUSED(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
